restrict multiple api calling, responsive design update, css updates

--- a/chatbot_updated.html
+++ b/chatbot_updated.html
@@ -15,11 +15,11 @@
         <section>
             <div class="container-fluid p-md-4 px-4 py-3">
                 <div class="row">
-                    <div id="chat-bot" class="p-lg-5 p-sm-4 p-3 mx-lg-3">
+                    <div id="chat-bot" class="p-lg-5 p-sm-4 p-3 mx-lg-1">
                         <div class="chat-bot">
                             <div class="mb-md-2 mb-0">
                                 <img class="logo" src="images/prakash_logo.png" class="mb-md-3 mb-2 cb-img img-fluid" alt="avatar">
-                                <h2 class="mb-md-4 mb-2"><b>Welcome to Prakash Software Solutions Pvt. Ltd.</b></h2>
+                                <h2 class="mb-2"><b>Welcome to Prakash Software Solutions Pvt. Ltd.</b></h2>
                                 <h5 class="mb-2">Thanks for stopping by.</h5>
                                 <h5>I'm <b>Piri <img src="images/bot.png" class="bot-img img-fluid" alt="avatar">,</b> your
                                     virtual assistant for our website. Feel free to ask me anything - I'm here
@@ -27,10 +27,10 @@
                             </div>
                             <div class="row mt-xl-5 mb-lg-2 mt-1 mb-0 p-sm-0 p-2">
                                 <ul class="list-group cs-list mb-4">
-                                    <li class="cs-btn" id="services-btn"><a href="#" >Tell me about your services.</a></li>
-                                    <li class="cs-btn" id="projectHelp-btn"><a href="#">I need help with a specific project.</a></li>
-                                    <li class="cs-btn" id="justBrowsing-btn"><a href="#" >I am just browsing.</a></li>
-                                    <li class="cs-btn" id="otherInquires-btn"><a href="#">Other inquiries.</a></li>
+                                    <li class="cs-btn" id="services-btn">Tell me about your services.</li>
+                                    <li class="cs-btn" id="projectHelp-btn">I need help with a specific project.</li>
+                                    <li class="cs-btn" id="justBrowsing-btn">I am just browsing.</li>
+                                    <li class="cs-btn" id="otherInquires-btn">Other inquiries.</li>
                                 </ul>
                             </div>
                             <div id="chat-messages" class="row p-sm-0 p-2 pt-0"></div>
