--- a/chatbot_updated.html
+++ b/chatbot_updated.html
@@ -48,7 +48,10 @@
                 </div>
             </div>
         </section>
-
+        <div id="toast-container" class="toast-container"></div>
+        <a id="scroll-to-bottom" class="scroll-to-bottom-btn">
+            <i class="fas fa-arrow-down"></i>
+        </a>
     <script type="text/javascript" src="./jquery_custom.js"></script>
     </body>
 
